# bootstrap-redux

./: CMakeLists.txt  project.vim  spec.txt  todo.txt
basecode/: CMakeLists.txt  result.h  result_message.h  types.h
basecode/adt/: array.h  hash_table.h  hashable.cpp  hashable.h  red_black_tree.h  set.h  stack.h  string.cpp  string.h  trie_map.h
basecode/adt/tests/: CMakeLists.txt  adt_tests.cpp  data_tests.cpp
basecode/context/: context.h
basecode/data/: array.h  bst.h  directed_graph.h  hash_table.h  hashable.h  queue.h  red_black_tree.h  set.h  string.cpp  string.h  trie_map.h
basecode/data/tests/: data_tests.cpp
basecode/errors/: errors.cpp  errors.h
basecode/format/: formatters.h
basecode/formatters/: formatters.h
basecode/graphviz/: attribute.h  attribute_container.cpp  attribute_container.h  dot_model.cpp  dot_model.h  graph.cpp  graph.h  model.h
basecode/graphviz/tests/: graphviz_tests.cpp
basecode/io/: binary.cpp  text.h
basecode/language/: common.cpp  common.h  lexeme_trie.h
basecode/language/core/ast/: ast.cpp  ast.h
basecode/language/core/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
basecode/language/core/lexer/tests/: lexer_tests.cpp
basecode/language/core/parser/: parser.cpp  parser.h
basecode/language/core/parser/tests/: main.cpp  parser_tests.cpp
basecode/logging/: fake_logger.cpp  fake_logger.h  logger.h  spd_logger.cpp  spd_logger.h
basecode/memory/: dl_allocator.cpp  dl_allocator.h  frame_allocator.h  object_pool.h  proxy_allocator.cpp  proxy_allocator.h  scratch_allocator.cpp  scratch_allocator.h  slab_allocator.cpp  slab_allocator.h  std_allocator.h  system.h  system_allocator.h  temp_allocator.h  trace_allocator.cpp  trace_allocator.h
basecode/memory/tests/: memory_tests.cpp
basecode/numbers/: bytes.h  parse.cpp
basecode/signals/: hook.cpp  hook.h
basecode/strings/: escape_parser.cpp  escape_parser.h  pool.cpp  pool.h  transforms.cpp  transforms.h
basecode/terminal/: stream_factory.cpp  stream_factory.h
basecode/utf8/: reader.h  source_buffer.cpp  source_buffer.h
basecode/workspace/: session.h
bc/: CMakeLists.txt
bcc/: main.cpp
compiler/: CMakeLists.txt  defer.h  result.h  result_message.h  types.cpp  types.h
compiler/context/: context.cpp
compiler/data/: array.h  bst.h  directed.h  directed_graph.h  hash_table.h  hashable.cpp  hashable.h  queue.h  red_black_tree.h  set.h  stack.h  string.cpp  string.h  trie_map.h
compiler/data/tests/: CMakeLists.txt  data_tests.cpp  main.cpp
compiler/errors/: errors.cpp  errors.h  types.cpp  types.h
compiler/formatters/: formatters.h
compiler/graph/: directed.h
compiler/graphviz/: attribute.cpp  attribute.h  attribute_container.cpp  attribute_container.h  dot_model.cpp  dot_model.h  edge.cpp  edge.h  graph.cpp  graph.h  model.h  node.cpp  node.h
compiler/graphviz/tests/: CMakeLists.txt  graphviz_tests.cpp
compiler/hashing/: murmur.cpp  murmur.h
compiler/id/: pool.cpp  pool.h
compiler/io/: binary.cpp  binary.h  text.cpp  text.h
compiler/language/: common.cpp  common.h  lexeme_trie.h
compiler/language/assembly/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
compiler/language/basecode/lexer/: lexer.cpp  lexer.h  token.h
compiler/language/basecode/lexer/tests/: lexer_tests.cpp  main.cpp
compiler/language/core/ast/: ast.cpp  ast.h
compiler/language/core/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
compiler/language/core/lexer/tests/: CMakeLists.txt  lexer_tests.cpp  trie_tests.cpp
compiler/language/core/parser/: parser.cpp  parser.h
compiler/language/core/parser/tests/: CMakeLists.txt  main.cpp  parser_tests.cpp
compiler/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
compiler/lexer/tests/: CMakeLists.txt  lexer_tests.cpp  trie_tests.cpp
compiler/logging/: fake_logger.cpp  fake_logger.h  spd_logger.h
compiler/memory/: allocator.h  block_allocator.h  debug_allocator.cpp  debug_allocator.h  dl_allocator.cpp  dl_allocator.h  dlmalloc_config.h  frame_allocator.h  object_pool.h  pool.h  proxy_allocator.cpp  proxy_allocator.h  scratch_allocator.cpp  scratch_allocator.h  slab_allocator.cpp  slab_allocator.h  stack_allocator.cpp  stack_allocator.h  system.cpp  system.h  system_allocator.cpp  system_allocator.h  temp_allocator.h  trace_allocator.cpp  trace_allocator.h
compiler/memory/tests/: CMakeLists.txt  main.cpp  memory_tests.cpp
compiler/numbers/: bytes.h  parse.cpp  parse.h
compiler/signals/: hook.cpp  hook.h
compiler/strings/: escape_parser.cpp  escape_parser.h  pool.cpp  pool.h  transforms.cpp  transforms.h
compiler/terminal/: stream_builder.cpp  stream_builder.h  stream_factory.cpp  stream_factory.h
compiler/threading/: auto_reset_event.cpp  auto_reset_event.h  manual_reset_event.cpp  manual_reset_event.h
compiler/utf8/: reader.cpp  reader.h  rune.cpp  rune.h  source_buffer.cpp  source_buffer.h
compiler/workspace/: session.cpp  session.h
